--- a/src/Example_11_04.form
+++ b/src/Example_11_04.form
@@ -100,7 +100,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="e7465" class="javax.swing.JButton" binding="buttonSec">
+          <component id="e7465" class="javax.swing.JButton" binding="JbuttonSec">
             <constraints>
               <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -108,7 +108,7 @@
               <text value="Расчет времени в секундах"/>
             </properties>
           </component>
-          <component id="5723f" class="javax.swing.JButton" binding="buttonPlus5Sec">
+          <component id="5723f" class="javax.swing.JButton" binding="JbuttonPlus5Sec">
             <constraints>
               <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -140,14 +140,6 @@
               <text value="Секунды"/>
             </properties>
           </component>
-          <component id="1fad6" class="javax.swing.JButton" binding="JButtonNewTrain">
-            <constraints>
-              <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Новый"/>
-            </properties>
-          </component>
           <component id="9bf7" class="javax.swing.JButton" binding="JbuttonDelTrain">
             <constraints>
               <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -170,9 +162,17 @@
             </constraints>
             <properties/>
           </component>
+          <component id="1fad6" class="javax.swing.JButton" binding="JButtonNewTrain">
+            <constraints>
+              <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Новый"/>
+            </properties>
+          </component>
         </children>
       </grid>
-      <component id="8819a" class="javax.swing.JButton" binding="buttonDepartureTime">
+      <component id="8819a" class="javax.swing.JButton" binding="JbuttonDepartureTime">
         <constraints>
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
