--- a/src/Example_11_04.form
+++ b/src/Example_11_04.form
@@ -148,30 +148,6 @@
         </constraints>
         <properties/>
       </component>
-      <component id="ec9b4" class="javax.swing.JFormattedTextField" binding="jFormattedTextTimeSec">
-        <constraints>
-          <grid row="3" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
-      <component id="ae488" class="javax.swing.JFormattedTextField" binding="jFormattedTextNumbTrain">
-        <constraints>
-          <grid row="7" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
-      <component id="eaeed" class="javax.swing.JFormattedTextField" binding="jFormattedTextDirectTrain">
-        <constraints>
-          <grid row="8" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <component id="3b852" class="javax.swing.JFormattedTextField" binding="jFormattedTextHourDepartTrain">
         <constraints>
           <grid row="10" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
@@ -188,7 +164,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="20979" class="javax.swing.JTextField" binding="jTextFieldminutesBeforeTrainDeparts">
+      <component id="20979" class="javax.swing.JTextField" binding="jTextFieldMinutesBeforeTrainDeparts">
         <constraints>
           <grid row="13" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -219,6 +195,30 @@
         <properties>
           <text value="Расчет времени до отправления поезда"/>
         </properties>
+      </component>
+      <component id="237b3" class="javax.swing.JTextField" binding="jTextFieldTimeSec">
+        <constraints>
+          <grid row="3" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="bc219" class="javax.swing.JTextField" binding="jTextNumbTrain">
+        <constraints>
+          <grid row="7" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="4e477" class="javax.swing.JTextField" binding="jTextDirectTrain">
+        <constraints>
+          <grid row="8" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
       </component>
     </children>
   </grid>
