--- a/src/Example_11_04.form
+++ b/src/Example_11_04.form
@@ -37,7 +37,7 @@
           <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Новое"/>
+          <text value="New"/>
         </properties>
       </component>
       <component id="bf9ba" class="javax.swing.JButton" binding="jButtonDeleteTrain">
@@ -45,7 +45,7 @@
           <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Удалить"/>
+          <text value="Delete"/>
         </properties>
       </component>
       <component id="b7ef8" class="javax.swing.JButton" binding="jButtonCalcTimeSeconds">
@@ -148,22 +148,6 @@
         </constraints>
         <properties/>
       </component>
-      <component id="3b852" class="javax.swing.JFormattedTextField" binding="jFormattedTextHourDepartTrain">
-        <constraints>
-          <grid row="10" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
-      <component id="56b7b" class="javax.swing.JFormattedTextField" binding="jFormattedTextMinDepartTrain">
-        <constraints>
-          <grid row="11" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <component id="20979" class="javax.swing.JTextField" binding="jTextFieldMinutesBeforeTrainDeparts">
         <constraints>
           <grid row="13" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
@@ -215,6 +199,22 @@
       <component id="4e477" class="javax.swing.JTextField" binding="jTextDirectTrain">
         <constraints>
           <grid row="8" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="50f7c" class="javax.swing.JTextField" binding="jTextFieldMinDepartTrain">
+        <constraints>
+          <grid row="11" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="9e29" class="javax.swing.JTextField" binding="jTextFieldHourDepartTrain">
+        <constraints>
+          <grid row="10" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
